--- a/2022年4月7日/my-app/src/App.css
+++ b/2022年4月7日/my-app/src/App.css
@@ -2,13 +2,23 @@
 @import '~antd/dist/antd.dark.css' (prefers-color-scheme: dark);
 
 @media (prefers-color-scheme: light) {
-  .site-background {
+  .background {
     background-color: white;
   }
 }
 
 @media (prefers-color-scheme: dark) {
-  .site-background {
+  .background {
     background-color: #141414;
   }
+}
+
+.shadow-1-right {
+  box-shadow: 1px 0px 2px -2px rgba(0, 0, 0, 0.16),
+    3px 0px 6px 0px rgba(0, 0, 0, 0.12), 5px 0px 12px 4px rgba(0, 0, 0, 0.09);
+}
+
+.shadow-1-down {
+  box-shadow: 0px 1px 2px -2px rgba(0, 0, 0, 0.16),
+    0px 3px 6px 0px rgba(0, 0, 0, 0.12), 0px 5px 12px 4px rgba(0, 0, 0, 0.09);
 }
